# ChangeLog for games-simulation/searchandrescue
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-simulation/searchandrescue/ChangeLog,v 1.2 2003/09/12 15:43:50 vapier Exp $

*searchandrescue-0.8.1 (30 Jul 2003)

  30 Jul 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.