@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-simulation/searchandrescue/Attic/searchandrescue-0.8.1.ebuild,v 1.1 2003/09/11 12:22:49 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-simulation/searchandrescue/Attic/searchandrescue-0.8.1.ebuild,v 1.2 2004/02/11 15:29:15 dholm Exp $
 
 inherit games
 
@@ -12,7 +12,7 @@ SRC_URI="ftp://wolfpack.twu.net/users/wolfpack/${MY_PN}-${PV}.tgz
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86"
+KEYWORDS="x86 ~ppc"
 IUSE="joystick"
 
 DEPEND="virtual/x11
