@@ -1,6 +1,9 @@
 # ChangeLog for games-simulation/searchandrescue
-# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-simulation/searchandrescue/ChangeLog,v 1.2 2003/09/12 15:43:50 vapier Exp $
+# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-simulation/searchandrescue/ChangeLog,v 1.3 2004/02/11 15:29:15 dholm Exp $
+
+  11 Feb 2004; David Holm <dholm@gentoo.org> searchandrescue-0.8.1.ebuild:
+  Added to ~ppc.
 
 *searchandrescue-0.8.1 (30 Jul 2003)
 
